<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CMD" Id="{242ed956-d5d9-4c8d-8b78-9cef6d2d5298}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CMD :
(
	reset:=1,
	start,
	stop,
	hold,
	unhold,
	suspend,
	unsuspend,
	abort,
	clear,
	powerOn
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>